--- a/finance-mate/package.json
+++ b/finance-mate/package.json
@@ -27,6 +27,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
+    "styled-component": "^2.8.0",
     "styled-components": "^6.0.4",
     "web-vitals": "^2.1.4"
   },
