--- a/finance-mate/package.json
+++ b/finance-mate/package.json
@@ -13,10 +13,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "d3": "^7.8.5",
     "gapi-script": "^1.2.0",
     "plaid": "^15.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-button": "^0.7.2",
     "react-plaid-link": "^3.4.0",
     "react-redux": "^8.1.1",
     "react-router": "^6.14.1",
@@ -26,6 +28,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
+    "styled-components": "^6.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
