--- a/finance-mate/package.json
+++ b/finance-mate/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "d3": "^7.8.5",
+    "date-fns": "^2.30.0",
     "gapi-script": "^1.2.0",
     "plaid": "^15.0.0",
     "react": "^18.2.0",
@@ -24,6 +25,7 @@
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
