--- a/finance-mate/package.json
+++ b/finance-mate/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "d3": "^7.8.5",
     "date-fns": "^2.30.0",
+    "framer-motion": "^10.13.0",
     "gapi-script": "^1.2.0",
     "plaid": "^15.0.0",
     "react": "^18.2.0",
