--- a/finance-mate/package.json
+++ b/finance-mate/package.json
@@ -28,11 +28,14 @@
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "react-swipeable-views": "^0.14.0",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.2",
+    "slick-carousel": "^1.8.1",
     "styled-component": "^2.8.0",
     "styled-components": "^6.0.4",
     "web-vitals": "^2.1.4"
