--- a/finance-mate/package.json
+++ b/finance-mate/package.json
@@ -10,6 +10,8 @@
     "@nivo/line": "^0.83.0",
     "@nivo/pie": "^0.83.0",
     "@react-oauth/google": "^0.11.0",
+    "@stripe/react-stripe-js": "^2.1.1",
+    "@stripe/stripe-js": "^1.54.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -28,6 +30,8 @@
     "react-router": "^6.14.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
